translates & car pipelines
